@@ -2,14 +2,23 @@ language: python
 sudo: required
 dist: xenial
 python:
+- '3.8'
 - '3.7'
 - '3.6'
-- '3.8'
 env:
 - DJANGO_VERSION="Django>=3.0,<3.1" RUN_WEB_TESTS=true BROWSER_TAG=chrome_latest DEPLOY=true
+- DJANGO_VERSION="Django>=3.0,<3.1" RUN_WEB_TESTS=False
 - DJANGO_VERSION="Django>=2.2,<2.3" RUN_WEB_TESTS=false
 - DJANGO_VERSION="Django>=2.1,<2.2" RUN_WEB_TESTS=false
 - DJANGO_VERSION="Django>=2.0,<2.1" RUN_WEB_TESTS=false
+matrix:
+  exclude:
+  - env: DJANGO_VERSION="Django>=3.0,<3.1" RUN_WEB_TESTS=False
+    python: '3.8'
+  - env: DJANGO_VERSION="Django>=3.0,<3.1" RUN_WEB_TESTS=true BROWSER_TAG=chrome_latest DEPLOY=true
+    python: '3.7'
+  - env: DJANGO_VERSION="Django>=3.0,<3.1" RUN_WEB_TESTS=true BROWSER_TAG=chrome_latest DEPLOY=true
+    python: '3.6'
 install:
 - pip install pip -U
 - pip install codecov
