@@ -1,3 +1,9 @@
+__next__
+------------------
+
+* Fixed issue displaying stars in admin (thanks @GDay)
+* Fixed issue with auto deploy configs
+
 0.9.0 (2019-12-12)
 ------------------
 
